--- a/pom.xml
+++ b/pom.xml
@@ -39,9 +39,9 @@
 
   <repositories>
     <repository>
-      <id>jboss-public</id>
-      <name>JBoss Public</name>
-      <url>https://repository.jboss.org/nexus/content/groups/public-jboss</url>
+      <id>indy-untested-builds</id>
+      <name>Indy Untested Builds</name>
+      <url>http://indy.cloud.pnc.engineering.redhat.com/api/group/builds-untested+shared-imports+public</url>
     </repository>
   </repositories>
 
